k8s_yaml/naos-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    cloud.google.com/neg-status: '{"network_endpoint_groups":{"7000":"k8s1-27628704-default-naos-client-service-7000-129db24a"},"zones":["asia-east1-a","asia-east1-c"]}'
  creationTimestamp: "2022-09-28T14:02:51Z"
  finalizers:
  - service.kubernetes.io/load-balancer-cleanup
  labels:
    app: naos-client
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:app: {}
      f:spec:
        f:allocateLoadBalancerNodePorts: {}
        f:externalTrafficPolicy: {}
        f:internalTrafficPolicy: {}
        f:ports:
          .: {}
          k:{"port":7000,"protocol":"TCP"}:
            .: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: GoogleCloudConsole
    operation: Update
    time: "2022-09-28T14:02:51Z"
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:finalizers:
          .: {}
          v:"service.kubernetes.io/load-balancer-cleanup": {}
      f:status:
        f:loadBalancer:
          f:ingress: {}
    manager: kube-controller-manager
    operation: Update
    subresource: status
    time: "2022-09-28T14:03:34Z"
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:cloud.google.com/neg-status: {}
    manager: glbc
    operation: Update
    subresource: status
    time: "2022-09-28T14:28:24Z"
  name: naos-client-service
  namespace: default
  resourceVersion: "29008122"
  uid: 7ab418d0-26f3-45b1-8e25-0d732cc522d4
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.69.130.169
  clusterIPs:
  - 10.69.130.169
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 31333
    port: 7000
    protocol: TCP
    targetPort: 7000
  selector:
    app: naos-client
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 35.229.224.183
